kubernetes-networks/coredns.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-dns-tcp
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: "ext-dns"
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 192.168.49.250
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: ext-dns-udp
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: "ext-dns"
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 192.168.49.250
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
