kubernetes-networks/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:  
  - http:
      paths:
      - pathType: Prefix
        path: /web
        backend:
          service:
            name: web-svc
            port:
              number: 8000
